(sctp) jdk.sctp/unix/native/libsctp/SctpNet.c "multiple definition" link errors with GCC10

XMLWordPrintable

    • b10
    • generic
    • linux

        === Output from failing command(s) repeated here ===
        * For target support_native_jdk.sctp_libsctp_BUILD_LIBSCTP_link:
        build-10/support/native/jdk.sctp/libsctp/SctpNet.o:(.bss+0x38): multiple definition of `nio_sctp_peeloff'
        build-10/support/native/jdk.sctp/libsctp/SctpChannelImpl.o:(.bss+0x60): first defined here
        build-10/support/native/jdk.sctp/libsctp/SctpNet.o:(.bss+0x30): multiple definition of `nio_sctp_bindx'
        build-10/support/native/jdk.sctp/libsctp/SctpChannelImpl.o:(.bss+0x68): first defined here
        build-10/support/native/jdk.sctp/libsctp/SctpNet.o:(.bss+0x$8): multiple definition of `nio_sctp_freepaddrs'
        build-10/support/native/jdk.sctp/libsctp/SctpChannelImpl.o:$.bss+0x70): first defined here
        build-10/support/native/jdk.sctp/libsctp/SctpNet.o:(.bss+0x$0): multiple definition of `nio_sctp_getpaddrs'
        build-10/support/native/jdk.sctp/libsctp/SctpChannelImpl.o:$.bss+0x78): first defined here
        build-10/support/native/jdk.sctp/libsctp/SctpNet.o:(.bss+0x18): multiple definition of `nio_sctp_freeladdrs'
        build-10/support/native/jdk.sctp/libsctp/SctpChannelImpl.o:(.bss+0x80): first defined here
        build-10/support/native/jdk.sctp/libsctp/SctpNet.o:(.bss+0x10): multiple definition of `nio_sctp_getladdrs'
        build-10/support/native/jdk.sctp/libsctp/SctpChannelImpl.o:$.bss+0x88): first defined here
        collect2: error: ld returned 1 exit status

        * All command lines available in build-10/make-support/failu
        re-logs.
        === End of repeated output ===

        The patch should go to net-dev and sctp-dev (?) for review.

              Assignee:
              Patrick Zhang (Inactive)
              Reporter:
              Patrick Zhang (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: