8238386: (sctp) jdk.sctp/unix/native/libsctp/SctpNet.c "multiple definition" link errors with GCC10

Fixed libsctp link errors caused by GCC10 default -fno-common

Reviewed-by: chegar